# OpenCV-Fun

./: .gitignore  CMakeLists.txt  main.cpp
